# sea_orm_practice_db2024

./: .env  Cargo.toml  README.md  compose.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs  test_helper.rs
src/entities/: mod.rs  post.rs  prelude.rs
